@@ -1,5 +1,9 @@
 # ap-project
 Color Switch Game - A Basic Implementation in JavaFX, a project for Advanced Programming, Monsoon 2020.
 
+
+
 Add controlsfx-8.40.14.jar present in resources/libraries to Libraries.
-Add --add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED to VM Options.
+Add the following to VM Options - 
+--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED
+--add-modules javafx.controls,javafx.media
